Safari365 Prod/src/objects/PM_user_story__c.object
<CustomObject>
    <fields>
        <fullName>Accepatance_Criteria__c</fullName>
        <label>Accepatance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>All_Bug_are_closed__c</fullName>
        <label>All Bug are closed</label>
        <summaryFilterItems>
            <field>Bug__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Bug__c.User_Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Related_bugs_Closed__c</fullName>
        <label>All Related bugs Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployed_to_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed to Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed_to_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed to QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quoted_Hours__c</fullName>
        <label>Quoted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Require_Extra_Effort__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Extra Effort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Significance__c</fullName>
        <label>Significance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Project_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <label>Technical Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tested_In_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tested In Live</label>
        <type>Checkbox</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Accepatance_Criteria__c</columns>
        <columns>Status__c</columns>
        <columns>Significance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Go_Live</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Accepatance_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Go Live Phase 1</value>
        </filters>
        <label>Go Live</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>New</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New</label>
    </listViews>
    <listViews>
        <fullName>Passenger_Setup</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>Passenger</value>
        </filters>
        <label>2.Passenger Setup</label>
    </listViews>
    <listViews>
        <fullName>QuotationObject</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Quotation Object</value>
        </filters>
        <label>4.QuotationObject</label>
    </listViews>
    <listViews>
        <fullName>REST_API</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jason New</value>
        </filters>
        <label>REST API</label>
    </listViews>
    <listViews>
        <fullName>Ready_For_Test</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Test</value>
        </filters>
        <label>Ready For Test</label>
    </listViews>
    <listViews>
        <fullName>Setting_Markup_ROE_Custom_Object</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Setting Markup &amp; ROE Custom Object</value>
        </filters>
        <label>3.Setting Markup &amp; ROE Custom Object</label>
    </listViews>
    <listViews>
        <fullName>Tour_Plan_Data_Sync</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Deployed_to_QA__c</columns>
        <columns>Deployed_to_Production__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Tour Plan Data Sync</value>
        </filters>
        <label>1.Tour Plan Data Sync</label>
    </listViews>
    <listViews>
        <fullName>WETU_Integration</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>WETU Integration</value>
        </filters>
        <label>5.WETU Integration</label>
    </listViews>
    <listViews>
        <fullName>X6_Itenary_Document</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Itinerary Document</value>
        </filters>
        <label>6.Itineray Document</label>
    </listViews>
    <nameField>
        <displayFormat>U-{00000000}</displayFormat>
        <label>User Story Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>User_Story_Closed</fullName>
        <active>true</active>
        <description>User Story can be closed when all bugs is set to
 complete stage</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c), ISPICKVAL(Status__c,&quot;Complete&quot;), All_Bug_are_closed__c &gt;0 )</errorConditionFormula>
        <errorMessage>The User story can be set to complete when all related bugs are set to  complete status</errorMessage>
    </validationRules>
</CustomObject>